# AIRBNB-data-pipeline

./: .gitignore  README.md  pyproject.toml
aws_dbt_snowflake_project/: .user.yml  ExampleProfile.yml  dbt_project.yml
aws_dbt_snowflake_project/analyses/: explore.sql  if_else.sql  loop.sql
aws_dbt_snowflake_project/macros/: multiply.sql  tag.sql  trimmer.sql
aws_dbt_snowflake_project/models/bronze/: bronze_bookings.sql  bronze_hosts.sql  bronze_listings.sql
aws_dbt_snowflake_project/models/gold/: obt.sql
aws_dbt_snowflake_project/models/gold/ephemeral/: bookings.sql  fact.sql  hosts.sql  listings.sql
aws_dbt_snowflake_project/models/silver/: silver_bookings.sql  silver_hosts.sql  silver_listings.sql
aws_dbt_snowflake_project/snapshots/: dim_bookings.yml  dim_hosts.yml  dim_listings.yml
aws_dbt_snowflake_project/tests/: source_test.sql
